# pyMogwai

./: .README.md.swp  .gitignore  .gitlab-ci.yml  .project  404.html  README.md  UB-10ML-mogwai.ipynb  index.html  live_demo.ipynb  mkdocs.yml  mogwai.ipynb  mogwai_notebook  objects.inv  pyproject.toml  time_queries.py  todo.txt
.github/workflows/: build.yml  upload-to-pypi.yml
app/: streamlit_app.py
mogwai/: config.py  examples.py  graph_config.py  graphs.py  mogwai_cmd.py  version.py
mogwai/core/: __init__.py  exceptions.py  hd_index.py  mogwaigraph.py  traversal.py  traverser.py
mogwai/core/steps/: base_steps.py  branch_steps.py  enums.py  filter_steps.py  flatmap_steps.py  io_step.py  map_steps.py  modulation_steps.py  predicates.py  scope.py  start_steps.py  statics.py  terminal_steps.py
mogwai/decorators/: __init__.py  decorators.py
mogwai/examples/: modern.py  schema.py
mogwai/io/: __init__.py  mogwai_io.py
mogwai/lod/: yamlable.py
mogwai/parser/: __init__.py  excel_converter.py  filesystem.py  graphml_converter.py  json_converter.py  pdfgraph.py  powerpoint_converter.py  rdf_converter.py  xml_converter.py
mogwai/schema/: graph_schema.py  nx_to_rdf.py
mogwai/utils/: __init__.py  graph_summary.py  type_utils.py  utils.py
mogwai/web/: i18n_config.py  node_view.py  server.py
mogwai/web/resources/i18n/: de.yaml  en.yaml
mogwai_examples/: UB-10ML-mogwai.ipynb  example_graph_configs.yaml  live_demo.ipynb  modern-schema.yaml  mogwai.ipynb  royal-family.json  weimar.graphml
scripts/: blackisort  doc  install  release  test  test_rdf
site/: index.html  objects.inv
site/search/: search_index.json
tests/: basetest.py  init_airroutes.py  init_crew.py  init_example.py  init_modern.py  queries.txt  query_parsing.ipynb  test_airroutes.py  test_branch.py  test_complex_queries.py  test_converter.py  test_examples.py  test_excel.py  test_extra_steps.py  test_filesystem.py  test_graph_schema.py  test_graph_summary.py  test_graphml.py  test_gremlinpython.py  test_json_converter.py  test_live_demo.py  test_mogwaigraph.py  test_pdf.py  test_pp.py  test_stackoverflow.py  test_traverser.py
tests/documents/: midterm.pptx  test_excel.json  test_excel.xlsx  test_gml.graphml  test_pp.json  test_pp1.pptx  test_rdf.rdf  test_xml.json  test_xml.xml
