[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyMogwai"
description = "PyMogwai is a Python-based implementation of the Gremlin graph traversal language, designed to create and handle knowledge graphs entirely in Python without the need for an external Gremlin server."
keywords = ["nicegui", "pyMogwai", "gremlin", "knowledge graph", "graph traversal"]
authors = [
  {name = "Joep Geuskens", email = "joep.geuskens@rwth-aachen.de"},
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Joep Geuskens", email = "joep.geuskens@rwth-aachen.de"},
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
  # https://networkx.org/
  'networkx==3.3',
  # https://pypi.org/project/dacite/
  "dacite>=1.8.1",
  # https://pypi.org/project/dataclasses-json/
  "dataclasses-json>=0.6.7"
]
requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "mogwai/__init__.py"

[project.urls]
Home = "https://github.com/juupje/pyMogwai"
Documentation = "https://cr.bitplan.com/index.php/pyMogwai"
Source = "https://github.com/juupje/pyMogwai"

[project.optional-dependencies]
test = [
  "green",
]
converters = [
  # https://github.com/py-pdf/pypdf
  'pypdf>=4.2.0',
  # https://github.com/WolfgangFahl/pySemanticSlides
  'pysemanticslides==0.0.10',
]
draw = [
  # https://github.com/pydot/pydot
  'pydot>=2.0.0',
]
graphviz = [
  # https://graphviz.org/
  'pygraphviz>=0.20.3',
]
gui = [
  # nicegui
  "nicegui>=2.5.0",
  # nicegui widgets e.g. menu solution/webserver separation
  "ngwidgets>=0.19.4",
  # internationalization
  # https://github.com/danhper/python-i18n
  "python-i18n>=0.3.9",
]
lod = [
  # lodstorage
  # https://pypi.org/project/pyLodStorage/
  "pyLodStorage>=0.13.3"
]
[tool.hatch.build.targets.wheel]
only-include = ["mogwai", "mogwai_examples"]

[tool.hatch.build.targets.wheel.sources]
"mogwai" = "mogwai"
"mogwai_examples" = "mogwai_examples"

[project.scripts]
mogwai = "mogwai.mogwai_cmd:main"
